--- a/package.json
+++ b/package.json
@@ -3,20 +3,21 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "npx ts-node api/index.ts",
-    "vercel-start": "yum install libuuid-devel libmount-devel zlib && cp /lib64/{libuuid,libmount,libblkid,libz}.so.1 node_modules/canvas/build/Release/ && npm run start"
+    "start": "npx ts-node api/index.ts"
   },
   "devDependencies": {
     "@types/node": "^17.0.42",
     "@vercel/node": "^2.9.6",
+    "@types/express": "^4.17.17",
+    "@types/sharp": "^0.32.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@types/express": "^4.17.17",
-    "canvas": "^2.11.2",
+    "axios": "^1.5.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "sharp": "^0.32.5",
     "ts-node": "^10.9.1"
   }
 }
